Referenced/Nintex DocGen/objects/Text_Group_Text_Snippet__c.object
<CustomObject>
    <fields>
        <fullName>Advanced_Filter_Conditions__c</fullName>
        <label>Advanced Filter Conditions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter__c</fullName>
        <label>Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level (Indent)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Text_Group__c</fullName>
        <label>Component Group</label>
        <referenceTo>Text_Group__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Text_Group_Text_Snippets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Text_Snippet__c</fullName>
        <label>Component</label>
        <referenceTo>Text_Snippet__c</referenceTo>
        <relationshipLabel>Component Groups</relationshipLabel>
        <relationshipName>Text_Group_Text_Snippets</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Component Group Component</label>
    <nameField>
        <displayFormat>CGC-{000000}</displayFormat>
        <label>Component Group Component Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Component Group Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>